@@ -6,7 +6,9 @@
 
 LIB_SRCS = arc4random.c fgetln.c inet_net_pton.c strlcat.c strlcpy.c md5c.c fmtcheck.c
 
-LIB_INCLUDES = bsd.h md5.h
+LIB_INCLUDES = include/bsd/ip_icmp.h include/bsd/random.h include/bsd/queue.h include/bsd/md5.h include/bsd/string.h include/bsd/bsd.h include/bsd/stdlib.h
+
+LIB_MANS = man/arc4random.3 man/strlcpy.3 man/fgetln.3 man/fmtcheck.3
 
 LIB_STATIC_OBJS = $(LIB_SRCS:%.c=%.o)
 LIB_SHARED_OBJS = $(LIB_SRCS:%.c=%.lo)
@@ -49,11 +51,11 @@ $(LIB_SHARED): $(LIB_SHARED_OBJS)
 install: libs
 	mkdir -p $(DESTDIR)/usr/lib/
 	mkdir -p $(DESTDIR)/usr/include/bsd/
+	mkdir -p $(DESTDIR)/usr/share/man/man3
 	install -m644 $(LIB_STATIC) $(DESTDIR)/usr/lib/
-	#install -m644 $(LIB_SONAME) $(DESTDIR)/usr/lib/
 	install -m644 $(LIB_SHARED) $(DESTDIR)/usr/lib/
-	#install -m644 $(LIB_SHARED_SO) $(DESTDIR)/usr/lib/
 	install -m644 $(LIB_INCLUDES) $(DESTDIR)/usr/include/bsd/
+	install -m644 $(LIB_MANS $(DESTDIR)/usr/share/man/man3)
 	cd $(DESTDIR)/usr/lib/ ; ln -fs $(LIB_SHARED) $(LIB_SHARED_SO)
 	cd $(DESTDIR)/usr/lib/ ; ln -fs $(LIB_SHARED) $(LIB_SONAME)
 
