@@ -1,0 +1,9 @@
+#ifndef LIBBSD_STDLIB_H
+#define LIBBSD_STDLIB_H
+
+#include <sys/types.h>
+#include <stdio.h>
+
+const char *fmtcheck(const char *, const char *);
+
+#endif
